--- a/style.css
+++ b/style.css
@@ -7,10 +7,16 @@
     font-family: 'Open Sans','Roboto', sans-serif;
 }
 
+body{
+    background-color: rgb(243, 243, 243);
+}
+
 main{
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 60%;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .section-phones img{
@@ -18,18 +24,34 @@ main{
 }
 
 .section-login{
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-login .group{
+    width: 23rem;
+}
+
+.section-login p{
+    font-size: 0.8rem;
 }
 
 .section-login input{
-    background-color: #d3d3d3;
+    border: 1px solid #d3d3d3;
+    background-color: rgb(243, 243, 243);
     padding: 0.7rem;
+    outline: none;
+    font-size: 0.7rem;
+}
+
+.section-login input:focus{
+    border: 1px solid #b9b9b9;
 }
 
 .section-login input,button{
-    border: none;
     border-radius: 3px;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
 }
 
 .section-login button{
@@ -44,6 +66,53 @@ main{
     cursor: pointer;
 }
 
+.group{
+    width: 100%;
+    background-color: #fff;
+    padding: 1.5rem 2.5rem;
+    text-align: center;
+    border: 1px solid #d3d3d3;
+    margin: 0.5rem 0;
+}
+
+.group img{
+    height: 3rem;
+    margin: 1rem 0;
+}
+
+.group h4{
+    color: #979797;
+    font-size: 0.8rem;
+    margin: 0.8rem 0;
+}
+
+.container-divider{
+    display: flex;
+    align-items: center;
+}
+
+.divider{
+    width: 8rem;
+    height: 0;
+    position: relative;
+    margin: 0 0.5rem;
+}
+
+.group a p{
+    color: #114e77;
+    font-size: 0.7rem;
+}
+
+.group p a{
+    color: #1282cc;
+    font-weight: bold;
+}
+
+fieldset,input,button{
+    width: 100%;
+    border: none;
+}
+
 a{
     text-decoration: none;
 }
@@ -52,6 +121,9 @@ a{
     display: grid;
     justify-content: center;
     text-align: center;
+}
+
+.footer-login,.btn-footer-login{
     margin: 1rem 0;
 }
 
@@ -62,9 +134,30 @@ a{
 .btn-footer-login{
     display: flex;
     gap: 0.5rem;
-    margin: 1rem 0;
 }
 
 .footer-login img{
     width: 8rem;
+}
+
+/* Tablets */
+@media (max-width: 1024px){
+    .section-phones,.section-login{
+        width: 90%;
+    }
+}
+
+/* Cellphones */
+@media (max-width: 650px){
+    body{
+        background-color: #fff;
+    }
+
+    .section-phones figure{
+        display: none;
+    }
+
+    .group{
+        border: none;
+    }
 }
